Sutter Health/src/objects/Contact_Validation_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Secure_State__c</fullName>
        <label>Secure State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MP</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secure_Street_Address__c</fullName>
        <label>Secure Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secure_Suite__c</fullName>
        <label>Secure Suite</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secure_Zip_Code__c</fullName>
        <label>Secure Zip Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Speciality__c</fullName>
        <label>Speciality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spoken_Languages__c</fullName>
        <label>Spoken Languages</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status field created as part of REQ 3611 PDV Call Center</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Non-Validated</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Validation-Aborted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tech_Case_Contact_Name__c</fullName>
        <description>Tech field to capture case contact name to include confirmation Email</description>
        <label>Tech Case Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Current_Campaign__c</fullName>
        <description>Used to filter current campaign records in the list views.</description>
        <formula>IF(AND(NOT( ISBLANK( PDI_Campaign__c ) ),   TRIM( PDI_Campaign__c ) =  TRIM( $Label.CL176_PDI_Current_Campaign_Name )) ,  &apos;Current Campaign&apos; , &apos;&apos;)</formula>
        <label>Tech Current Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Is_Campaign_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for campaign reprocess filter in provider campaign initiation batch.</description>
        <label>Is Campaign Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_Last_Verified_Date__c</fullName>
        <formula>IF( AND(NOT(ISBLANK( Last_Verified_Date__c )), (Last_Verified_Date__c  &gt;  ProviderInfoHistory__r.Last_Verified_Date__c)) , Last_Verified_Date__c  , ProviderInfoHistory__r.Last_Verified_Date__c)</formula>
        <label>Last Verified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tech_Ok_to_Text__c</fullName>
        <formula>IF(NOT(Ok_to_Text__c),&quot;No&quot;,&quot;Yes&quot;)</formula>
        <label>Tech Ok to Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Phone_Number__c</fullName>
        <description>used to store phone number without special characters.</description>
        <label>Tech Phone Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Primary_Phone_Number__c</fullName>
        <description>Used to store phone number without special characters</description>
        <formula>SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE( Secure_Phone__c , &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;), &quot;+&quot;, &quot;&quot;), &quot;*&quot;, &quot;&quot;), &quot;x&quot;, &quot;&quot;), &quot;_&quot;, &quot;&quot;), &quot;.&quot;, &quot;&quot;)</formula>
        <label>Tech Primary Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Provider_Service_Status__c</fullName>
        <formula>IF( Retired_Departed__c == true, &apos;Retired&apos;, 
IF( Practicing_Physician__c == true , &apos;Active&apos;,
IF( Resigned_From_Sutter__c == true, &apos;Inactive&apos;, &apos;&apos;)))</formula>
        <label>Tech_Provider Service Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Success_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech Success Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_Validation_Status1__c</fullName>
        <description>used for reporting purpose</description>
        <formula>IF(ISBLANK( Validation_Source_Channel__c) , &apos;Non-Validated&apos;, 
IF(Validation_Source_Channel__c == &apos;SFPP&apos;, &apos;Email Campaign&apos;, 
IF(Validation_Source_Channel__c == &apos;SFPA&apos;, &apos;Call Campaign&apos;, &apos;&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tech Validation Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Validation_Status__c</fullName>
        <description>Used to show on visualforce report.</description>
        <label>Tech Validation Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_is_Contact_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to control isChanged flags update on contact update.</description>
        <label>is Contact Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TempCampaign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To be deleted</description>
        <label>TempCampaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unvalidated_Since_Days__c</fullName>
        <formula>IF(ISBLANK(Last_Verified_Date__c),FLOOR(now()-CreatedDate),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unvalidated Since (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validated_Source_Channel_For_Report__c</fullName>
        <formula>IF( Validation_Source_Channel__c = &apos;SFPP&apos;, 
IF( Associated_Case_Id__r.RecordType_Name__c = &apos;Provider Validation RT&apos; , &apos;SFPA&apos;, IF( Printed_Street_Address__c  != &apos;&apos;, &apos;SFSA&apos;,&apos;SFPP&apos;))  , 
  Validation_Source_Channel__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Validated Source Channel For Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validated_Source__c</fullName>
        <formula>IF( Validation_Source_Channel__c = &apos;SFPP&apos;, 
IF( Associated_Case_Id__r.RecordType_Name__c = &apos;Provider Validation RT&apos; , &apos;SFPA&apos;, IF( Printed_Street_Address__c != &apos;&apos;, &apos;SFSA&apos;,&apos;SFPP&apos;)) , 
Validation_Source_Channel__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Validated Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validation_Channel__c</fullName>
        <formula>IF(ISBLANK(Last_Verified_Date__c) ,&apos;Not Validated&apos;,&apos;SFDC Validated&apos;)</formula>
        <label>Validation Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validation_Source_Channel__c</fullName>
        <label>Validation Source Channel</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_Address__c</fullName>
        <label>Website Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Welcome_Email_Sent_History__c</fullName>
        <description>PCRM :Track Email Sent Information to Providers</description>
        <label>Welcome Email Sent History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>phone_test__c</fullName>
        <formula>SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE(Secure_Phone__c, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;)</formula>
        <label>phone test</label>
        <type>Text</type>
    </fields>
    <label>Provider Information Summary</label>
    <listViews>
        <fullName>My_Closed_Cases</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
        <columns>NAME</columns>
        <columns>Secure_Phone__c</columns>
        <columns>Email__c</columns>
        <columns>Provider_NPI_F__c</columns>
        <columns>Provider_ID_F__c</columns>
        <columns>Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Validated</value>
        </filters>
        <filters>
            <field>Associated_Case_Closed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Tech_Current_Campaign__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Provider_Active_Status__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Providers_By_Phone_Number__c</field>
            <operation>equals</operation>
        </filters>
        <label>My Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Cases</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>Secure_Phone__c</columns>
        <columns>Email__c</columns>
        <columns>Provider_NPI_F__c</columns>
        <columns>Status__c</columns>
        <columns>Case_Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Accepted</value>
        </filters>
        <filters>
            <field>Associated_Case_Closed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Tech_Current_Campaign__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Provider_Active_Status__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>My_Team_Closed_Cases</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
        <columns>NAME</columns>
        <columns>Secure_Phone__c</columns>
        <columns>Email__c</columns>
        <columns>Provider_NPI_F__c</columns>
        <columns>Provider_ID__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Validated</value>
        </filters>
        <filters>
            <field>Associated_Case_Closed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Tech_Current_Campaign__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Provider_Active_Status__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Providers_By_Phone_Number__c</field>
            <operation>equals</operation>
        </filters>
        <label>My Team Closed Cases</label>
        <sharedTo>
            <group>SOC_Supervisors</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Team_Open_Cases</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
        <columns>NAME</columns>
        <columns>Secure_Phone__c</columns>
        <columns>Email__c</columns>
        <columns>Provider_NPI_F__c</columns>
        <columns>Provider_ID__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Accepted</value>
        </filters>
        <filters>
            <field>Associated_Case_Closed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Tech_Current_Campaign__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Provider_Active_Status__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Providers_By_Phone_Number__c</field>
            <operation>equals</operation>
        </filters>
        <label>My Team Open Cases</label>
        <sharedTo>
            <group>SOC_Supervisors</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Non_Validated_Difficult_Queue</fullName>
        <booleanFilter>((1 OR 2) AND 3) AND (4 AND 5) AND 6 AND 7 AND 8</booleanFilter>
        <columns>NAME</columns>
        <columns>Secure_Phone__c</columns>
        <columns>Email__c</columns>
        <columns>Provider_NPI_F__c</columns>
        <columns>Provider_ID__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Validated_Source__c</field>
            <operation>equals</operation>
            <value>NV</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Non-Validated</value>
        </filters>
        <filters>
            <field>Address_Type__c</field>
            <operation>equals</operation>
            <value>Primary</value>
        </filters>
        <filters>
            <field>Provider_NPI_F__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Provider_License_Number__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Tech_Current_Campaign__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Retired_Departed__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Provider_Active_Status__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Non-Validated Difficult Queue</label>
        <queue>Non_Validated_Providers</queue>
        <sharedTo>
            <group>Summary_of_Care_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Non_Validated_Providers_Contact_Validation_Summary</fullName>
        <booleanFilter>((1 OR 2) AND 3) AND (4 OR 5) AND 6 AND 7 AND 8 AND 9</booleanFilter>
        <columns>NAME</columns>
        <columns>Secure_Phone__c</columns>
        <columns>Email__c</columns>
        <columns>Provider_NPI_F__c</columns>
        <columns>Provider_ID__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Validated_Source__c</field>
            <operation>equals</operation>
            <value>NV</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Non-Validated</value>
        </filters>
        <filters>
            <field>Address_Type__c</field>
            <operation>equals</operation>
            <value>Primary</value>
        </filters>
        <filters>
            <field>Provider_NPI_F__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Provider_License_Number__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Tech_Current_Campaign__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Retired_Departed__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Provider_Active_Status__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Providers_By_Phone_Number__c</field>
            <operation>equals</operation>
        </filters>
        <label>Non-Validated</label>
        <queue>Non_Validated_Providers</queue>
        <sharedTo>
            <group>Summary_of_Care_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PDIDuplicateRecords</fullName>
        <columns>NAME</columns>
        <columns>Secure_Phone__c</columns>
        <columns>Status__c</columns>
        <columns>Secure_Street_Address__c</columns>
        <columns>Secure_City__c</columns>
        <columns>Secure_State__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>contains</operation>
            <value>PDI</value>
        </filters>
        <filters>
            <field>Tech_Current_Campaign__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>PDIDuplicateRecords</label>
        <sharedTo>
            <group>Summary_of_Care_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PDI_Provider_Validation_Aborted</fullName>
        <columns>NAME</columns>
        <columns>Secure_Phone__c</columns>
        <columns>Email__c</columns>
        <columns>Provider_NPI_F__c</columns>
        <columns>Provider_ID_F__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Validation-Aborted</value>
        </filters>
        <filters>
            <field>Tech_Current_Campaign__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>PDI Provider Validation Aborted</label>
        <sharedTo>
            <group>Summary_of_Care_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Validated_Providers</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6</booleanFilter>
        <columns>NAME</columns>
        <columns>Secure_Phone__c</columns>
        <columns>Email__c</columns>
        <columns>Provider_NPI_F__c</columns>
        <columns>Provider_ID_F__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Last_Verified_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Address_Type__c</field>
            <operation>equals</operation>
            <value>Primary</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Validated</value>
        </filters>
        <filters>
            <field>Tech_Current_Campaign__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Provider_Active_Status__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Providers_By_Phone_Number__c</field>
            <operation>equals</operation>
        </filters>
        <label>Validated Providers</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Provider Information Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>